codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__header_default.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"        Codex DashFlow - test-session-12345 @ ~/codex_dashflow/crates/tui       "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
