codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_no_placeholder_with_text.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌Input [Ctrl+Enter:send Enter:newline Esc:normal] (2 words, 9 chars)───────────┐"
"│Some text                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
