codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_placeholder_insert.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌ Input [Ctrl+Enter:send Enter:newline Esc:normal] ────────────────────────────┐"
"│Type a message... (/ for commands, Ctrl+Enter to send)                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
