codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_placeholder_normal.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌ Input [i:insert /:search q:quit j/k:scroll] ─────────────────────────────────┐"
"│Press 'i' to enter insert mode                                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
