codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_processing_style.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌Input [Processing...] (13 chars)──────────────────────────────────────────────┐"
"│Processing...                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
