codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_scroll_right_indicator.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌Input [Ctrl+Enter:send Enter:newline Esc:normal] (100 chars)──────────────────┐"
"│aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa▶│"
"└──────────────────────────────────────────────────────────────────────────────┘"
