codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__input_with_text.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
"┌Input [Ctrl+Enter:send Enter:newline Esc:normal] (6 words, 32 chars)──────────┐"
"│Create a new file called test.rs                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
