codex_dashflow/crates/tui/src/snapshots/codex_dashflow_tui__ui__tests__status_approval_auto.snap
---
source: crates/tui/src/ui.rs
expression: terminal.backend()
---
" INSERT  Turn: 0 | Model: gpt-4o-mini | ~3/128k (0%) | Env | Auto               "
